Remove commented-out layout options and disable chart interaction features in index.html

--- a/index.html
+++ b/index.html
@@ -133,10 +133,6 @@
         const chart = LightweightCharts.createChart(chartContainer, {
           width: chartContainer.clientWidth,
           height: 500,
-          // layout: {
-          //   backgroundColor: "transparent",
-          //   textColor: "rgba(255, 255, 255, 0.9)",
-          // },
           layout: {
             background: { type: "solid", color: "transparent" }, // Quan trọng!
             textColor: "#ffffff",
@@ -152,8 +148,8 @@
             borderColor: "rgba(255, 255, 255, 0.2)",
             timeVisible: true,
           },
-          handleScroll: false,
-          handleScale: false,
+          // handleScroll: false,
+          // handleScale: false,
         })
 
         // Tạo dữ liệu
